SFDCProject/src/objects/Payment_Transaction__c.object
<CustomObject>
    <description>This object stores all payment transactions and its details. To make sure data elements would be kept irrespective of their original objects, there are no lookups.</description>
    <fields>
        <fullName>Access_Key__c</fullName>
        <label>Access Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Number__c</fullName>
        <label>Contact Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Payment Transactions</relationshipLabel>
        <relationshipName>Payment_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Custom_Parameters__c</fullName>
        <inlineHelpText>This is a Json of all custom parameters specified in this payment transaction.</inlineHelpText>
        <label>Custom Parameters</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invalid_Field_Names__c</fullName>
        <label>Invalid Field Names</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Source_Type__c</fullName>
        <formula>TEXT(Opportunity__r.Opportunity_Source_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Source Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Payment Transactions</relationshipLabel>
        <relationshipName>Payment_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Gateway_Reference_Num__c</fullName>
        <label>Trans Ref No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Gateway_Transaction_Id__c</fullName>
        <label>Request ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Mode__c</fullName>
        <formula>If(Transaction_Type__c=&apos;sale&apos;,&apos;one-time&apos;,&apos;recurring&apos;)</formula>
        <label>Payment Mode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Page_Url__c</fullName>
        <inlineHelpText>This is the URL of the page where this payment was processed.</inlineHelpText>
        <label>Payment Page Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Payment_Token__c</fullName>
        <inlineHelpText>This is the payment token received from Cybersource (payment gateway). This token can be used subsequently to bill the customer for any recurring charges.</inlineHelpText>
        <label>Payment Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Id__c</fullName>
        <label>Profile Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prospect_Id__c</fullName>
        <label>Prospect Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Num__c</fullName>
        <label>Merchant Reference Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Partner__c</fullName>
        <formula>Opportunity__r.Sales_Partner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Partner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Code__c</fullName>
        <label>Reason Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Icon__c</fullName>
        <formula>If(Status__c=&apos;accept&apos;, IMAGE(&apos;/img/msg_icons/confirm16.png&apos;, &apos;Successful&apos;), IMAGE(&apos;/img/msg_icons/error16.png&apos;, &apos;Error&apos;))</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Message__c</fullName>
        <label>Reply Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_DateTime__c</fullName>
        <label>Transaction DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Transaction_Id__c</fullName>
        <label>Transaction Uuid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Payment Transaction</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Payment_Type__c</columns>
        <columns>Payment_Mode__c</columns>
        <columns>Status_Icon__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PTX-{000000}</displayFormat>
        <label>Payment Transaction#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Transactions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>